--- a/MapBoxTest/Podfile
+++ b/MapBoxTest/Podfile
@@ -6,4 +6,6 @@ use_frameworks!
 target 'MapBoxTest' do
   pod 'Mapbox-iOS-SDK', '~> 5.0'
   pod 'MapboxNavigation', '~> 0.39.0'
+  pod 'Moya'
+  pod 'MapboxGeocoder.swift', '~> 0.12'
 end
